--- a/src/main/webapp/publico/estatistica.xhtml
+++ b/src/main/webapp/publico/estatistica.xhtml
@@ -143,23 +143,11 @@
 			onsuccess="PF('statusDialog').hide()" />
 		<p:growl id="growl" showDetail="false" life="2000" />
 		<br />
-		<div id="divEstatisticaECCAptidaoAtividades">
-			<div id="divEstatisticaECC2">
-				<!--
-				<div id="divBoxSuperiorGeral">
-					<h:panelGrid columns="3">
-						<h:graphicImage library="imagens/menu" name="ecc.png"
-										style="margin-top:5px;width:30px; height:30px;" />
-						<h:panelGroup>
-							<h:outputLabel value="Quadro Indicativo"
-										   style="font-size:13px; 	font-weight: bold;" />
-						</h:panelGroup>
-					</h:panelGrid>
-				</div>
-				-->
+		<div id="divEstatisticaGeral">
+			<div id="divEstatisticaECC">
 				<div id="divEstatisticaECCSuperiorEsquerda">
 					<div id="divEstatisticaECCSuperiorEsquerda_01">
-						<div class="caixa caixa-azul" style="width: 522px;">
+						<div class="caixa caixa-azul" style="width: 524px;">
 							<h:outputLabel value="Dirigentes"
 										   styleClass="negrito" style="font-size:15px;" />
 							<p:selectOneMenu id="ecc" value="#{estatisticaBean.eccFiltro}"
@@ -276,24 +264,28 @@
 											   styleClass="negrito" style="font-size:15px;" />
 							</h:panelGroup>
 						</h:panelGrid>
-					<div id="divDadosAptidao">
-						<h:panelGroup id="tabelaAptidoes">
-							<c:forEach items="#{estatisticaBean.listaDasAptidoes}"
-									   var="result" varStatus="count">
-								<div id="divLista_02">
-									<p:outputLabel value="#{result.aptidao}" styleClass="negrito" />
-								</div>
-								<div id="divLista_03">
-									<p:outputLabel value="#{result.quantidade}" />
-								</div>
-								<div id="limpa" />
-								<hr	style="border: 1px; border-top: 1px solid #ccc; margin-left: 10px; width: 94%" />
-							</c:forEach>
-						</h:panelGroup>
+						<div id="divDadosAptidao">
+							<h:panelGroup id="tabelaAptidoes">
+								<c:forEach items="#{estatisticaBean.listaDasAptidoes}"
+										   var="result" varStatus="count">
+									<div id="divLista_02">
+										<p:commandLink actionListener="#{estatisticaBean.imprimirEcc}"
+													   target="_blank" ajax="false" immediate="true">
+											<p:outputLabel value="#{result.aptidao}" styleClass="negrito" />
+										</p:commandLink>
+									</div>
+									<div id="divLista_03">
+										<p:outputLabel value="#{result.quantidade}" />
+									</div>
+									<div id="limpa" />
+									<hr	style="border: 1px; border-top: 1px solid #ccc; margin-left: 10px; width: 94%" />
+								</c:forEach>
+							</h:panelGroup>
+						</div>
 					</div>
-				</div>
 			</div>
 			<!-- DIV ATIVIDADES -->
+			<h:panelGrid rendered="false">
 			<div id="divEstatisticaAtividadeEncontristaEquipeSuperiorDireita">
 				<div id="divEstatisticaAtividadeEncontristaEquipeSuperiorDireita_01">
 					<div class="caixa caixa-verde" style="width: 320px;">
@@ -337,26 +329,103 @@
 						</div>
 					</div>
 				</div>
-				<!--
 			</div>
-			-->
-		</div>
-	</div>
-	<div id="divEstatisticaChefeForaInferior">
-		<div id="divEstatisticaChefeInferiorEsquerda">
-			<!-- DIV ENCONTRISTAS/CÍRCULOS -->
-				<div id="divEstatisticaChefeInferiorEsquerda_01">
-					<div class="caixa caixa-azul" style="width: 522px;">
-						<h:outputLabel value="Encontristas/Círculos"
-									   styleClass="negrito" style="font-size:15px;" />
+			</h:panelGrid>
+			<div id="divEstatisticaChefeForaInferior">
+				<div id="divEstatisticaChefeInferiorEsquerda">
+					<!-- DIV ENCONTRISTAS/CÍRCULOS -->
+					<div id="divEstatisticaChefeInferiorEsquerda_01">
+						<div class="caixa caixa-verde" style="width: 524px;">
+							<h:outputLabel value="Encontristas/Círculos"
+										   styleClass="negrito" style="font-size:15px;" />
 							<p:selectOneMenu id="ecc1" value="#{estatisticaBean.eccFiltro}"
-										 style="width:105px;margin-left:196px;display: inline-table">
+											 style="width:105px;margin-left:196px;display: inline-table">
+								<f:selectItem itemLabel="TODOS"/>
+								<f:selectItems value="#{eccBean.listaEcc}"
+											   var="ecc" itemValue="#{ecc.numero}"
+											   itemLabel="#{ecc.numero}" />
+								<p:ajax listener="#{estatisticaBean.filtraPorEncontristasCirculos()}"
+										event="change" update="tabelaEncontristasCirculos" />
+							</p:selectOneMenu>
+							<p:commandLink actionListener="#{estatisticaBean.imprimirEcc}"
+										   target="_blank" ajax="false" immediate="true">
+								<p:button icon="ui-icon-print" style="margin-left: 5px;" />
+							</p:commandLink>
+						</div>
+					</div>
+					<div id="divEstatisticaChefeInferiorEsquerda_02">
+						<p:dataTable id="tabelaEncontristasCirculos" var="circulo" style="width: 530px; height: 260px;"
+									 value="#{estatisticaBean.listaDosCirculos}"
+									 emptyMessage="Não há Encontristas/Círculos">
+							<p:columnGroup type="header">
+								<p:row>
+									<p:column rowspan="1" headerText="Encontristas/Círculos" width="470px;"/>
+								</p:row>
+							</p:columnGroup>
+							<p:subTable var="encontristas" value="#{circulo.circulosEccCasais}" rendered="#{circulo.circulosEccCasais.size() > 0}">
+								<f:facet name="header">
+									<h:panelGrid columns="4" styleClass="semBordaInterna"
+												 columnClasses="gridColum01, gridColum02">
+										<h:graphicImage library="imagens" name="green.png" width="15" height="15" rendered="#{circulo.circulo.descricao eq 'VERDE'}"
+														style="float: right;" title="Verde"/>
+										<h:graphicImage library="imagens" name="red.png" width="15" height="15" rendered="#{circulo.circulo.descricao eq 'VERMELHO'}"
+														style="float: right;" title="Vermelho"/>
+										<h:graphicImage library="imagens" name="blue.png" width="15" height="15" rendered="#{circulo.circulo.descricao eq 'AZUL'}"
+														style="float: right;" title="Azul"/>
+										<h:graphicImage library="imagens" name="yellow.png" width="15" height="15" rendered="#{circulo.circulo.descricao eq 'AMARELO'}"
+														style="float: right;" title="Amarelo"/>
+										<h:graphicImage library="imagens" name="pink.png" width="15" height="15" rendered="#{circulo.circulo.descricao eq 'ROSA'}"
+														style="float: right;" title="Rosa"/>
+										<h:graphicImage library="imagens" name="orange.png" width="15" height="15" rendered="#{circulo.circulo.descricao eq 'LARANJA'}"
+														style="float: right;" title="Laranja"/>
+										<h:outputText
+												value="#{circulo.casalCoordenador.nomeUsual}" />
+										<h:graphicImage library="imagens" value="/image?imagem=#{circulo.casalCoordenador.fotoEle}" rendered="#{circulo.casalCoordenador.fotoEle.length() > 0}"
+														style="width:20px; height:20px; float: right;" title="Foto dele"/>
+										<h:graphicImage library="imagens" value="/image?imagem=#{circulo.casalCoordenador.fotoEla}" rendered="#{circulo.casalCoordenador.fotoEla.length() > 0}"
+														style="width:20px; height:20px; float: left;" title="Foto dela"/>
+
+									</h:panelGrid>
+								</f:facet>
+								<p:column>
+									<h:outputText value="#{encontristas.ficha.nomeUsual}" />
+									<h:graphicImage library="imagens" value="/image?imagem=#{encontristas.ficha.fotoEla}" rendered="#{encontristas.ficha.fotoEla.length() > 0}"
+													style="width:20px; height:20px; float: right;" title="Foto dela"/>
+									<h:graphicImage library="imagens" value="/image?imagem=#{encontristas.ficha.fotoEle}" rendered="#{encontristas.ficha.fotoEle.length() > 0}"
+													style="width:20px; height:20px; float: right;" title="Foto dele"/>
+								</p:column>
+								<p:columnGroup type="footer">
+									<p:row>
+										<p:column footerText="Total: #{circulo.circulosEccCasais.size()}"
+												  style="text-align:right; background-color:#adc2eb;" />
+									</p:row>
+								</p:columnGroup>
+							</p:subTable>
+						</p:dataTable>
+					</div>
+				</div>
+				<!-- DIV EQUIPES -->
+				<div id="divEstatisticaChefeInferiorDireita">
+					<div class="caixa caixa-vermelha" style="width: 520px;">
+						<h:outputLabel value="Equipes"
+									   styleClass="negrito" style="font-size:15px;" />
+						<p:selectOneMenu id="equipe" value="#{estatisticaBean.equipeFiltro}"
+										 style="width:150px;margin-left:92px;display: inline-table">
+							<f:selectItem itemLabel="TODAS"/>
+							<f:selectItems value="#{equipeEccBean.listaEquipe}"
+										   var="equipe" itemValue="#{equipe.descricao}"
+										   itemLabel="#{equipe.descricao}" />
+							<p:ajax listener="#{estatisticaBean.filtraPorEquipes()}"
+									event="change" update="tabelaEquipes" />
+						</p:selectOneMenu>
+						<p:selectOneMenu id="ecc2" value="#{estatisticaBean.eccFiltro}"
+										 style="width:105px;margin-left:24px;display: inline-table">
 							<f:selectItem itemLabel="TODOS"/>
 							<f:selectItems value="#{eccBean.listaEcc}"
 										   var="ecc" itemValue="#{ecc.numero}"
 										   itemLabel="#{ecc.numero}" />
-								<p:ajax listener="#{estatisticaBean.filtraPorEncontristasCirculos()}"
-									event="change" update="tabelaEncontristasCirculos" />
+							<p:ajax listener="#{estatisticaBean.filtraPorEquipes()}"
+									event="change" update="tabelaEquipes" />
 						</p:selectOneMenu>
 						<p:commandLink actionListener="#{estatisticaBean.imprimirEcc}"
 									   target="_blank" ajax="false" immediate="true">
@@ -364,122 +433,46 @@
 						</p:commandLink>
 					</div>
 				</div>
-				<div id="divEstatisticaChefeInferiorEsquerda_02">
-					<p:dataTable id="tabelaEncontristasCirculos" var="circulo" style="width: 530px; height: 260px;"
-								 value="#{estatisticaBean.listaDosCirculos}"
-								 emptyMessage="Não há Encontristas/Círculos">
+				<div id="divEstatisticaChefeInferiorDireita_01">
+					<p:dataTable id="tabelaEquipes" var="equipe" style="width: 525px; height: 260px;"
+								 value="#{estatisticaBean.listaDasEquipes}"
+								 emptyMessage="Não há Equipes">
 						<p:columnGroup type="header">
 							<p:row>
-								<p:column rowspan="1" headerText="Encontristas/Círculos" width="470px;"/>
+								<p:column rowspan="1" headerText="Equipes" width="470px;"/>
 							</p:row>
 						</p:columnGroup>
-						<p:subTable var="encontristas" value="#{circulo.circulosEccCasais}" rendered="#{circulo.circulosEccCasais.size() > 0}">
+						<p:subTable var="equipeCasais" value="#{equipe.equipesEccCasais}" rendered="#{equipe.equipesEccCasais.size() > 0}">
 							<f:facet name="header">
-								<h:panelGrid columns="4" styleClass="semBordaInterna"
-											 columnClasses="gridColum01, gridColum02">
-									<h:graphicImage library="imagens" name="green.png" width="15" height="15" rendered="#{circulo.circulo.descricao eq 'VERDE'}"
-													style="float: right;" title="Verde"/>
-									<h:graphicImage library="imagens" name="red.png" width="15" height="15" rendered="#{circulo.circulo.descricao eq 'VERMELHO'}"
-													style="float: right;" title="Vermelho"/>
-									<h:graphicImage library="imagens" name="blue.png" width="15" height="15" rendered="#{circulo.circulo.descricao eq 'AZUL'}"
-													style="float: right;" title="Azul"/>
-									<h:graphicImage library="imagens" name="yellow.png" width="15" height="15" rendered="#{circulo.circulo.descricao eq 'AMARELO'}"
-													style="float: right;" title="Amarelo"/>
-									<h:graphicImage library="imagens" name="pink.png" width="15" height="15" rendered="#{circulo.circulo.descricao eq 'ROSA'}"
-													style="float: right;" title="Rosa"/>
-									<h:graphicImage library="imagens" name="orange.png" width="15" height="15" rendered="#{circulo.circulo.descricao eq 'LARANJA'}"
-													style="float: right;" title="Laranja"/>
+								<h:panelGrid columns="3" styleClass="semBordaInterna"
+											 columnClasses="gridColum01 gridColum02 gridColum02">
 									<h:outputText
-											value="#{circulo.casalCoordenador.nomeUsual}" />
-									<h:graphicImage library="imagens" value="/image?imagem=#{circulo.casalCoordenador.fotoEle}" rendered="#{circulo.casalCoordenador.fotoEle.length() > 0}"
-													style="width:20px; height:20px; float: right;" title="Foto dele"/>
-									<h:graphicImage library="imagens" value="/image?imagem=#{circulo.casalCoordenador.fotoEla}" rendered="#{circulo.casalCoordenador.fotoEla.length() > 0}"
+											value="#{equipe.equipe.descricao} | #{equipe.casalCoordenador.nomeUsual}" />
+									<h:graphicImage library="imagens" value="/image?imagem=#{equipe.casalCoordenador.fotoEle}" rendered="#{equipe.casalCoordenador.fotoEle.length() > 0}"
+													style="width:20px; height:20px; float: right;" title="Foto dela"/>
+									<h:graphicImage library="imagens" value="/image?imagem=#{equipe.casalCoordenador.fotoEla}" rendered="#{equipe.casalCoordenador.fotoEla.length() > 0}"
 													style="width:20px; height:20px; float: left;" title="Foto dela"/>
 
 								</h:panelGrid>
 							</f:facet>
 							<p:column>
-								<h:outputText value="#{encontristas.ficha.nomeUsual}" />
-								<h:graphicImage library="imagens" value="/image?imagem=#{encontristas.ficha.fotoEla}" rendered="#{encontristas.ficha.fotoEla.length() > 0}"
+								<h:outputText value="#{equipeCasais.ficha.nomeUsual}" />
+								<h:graphicImage library="imagens" value="/image?imagem=#{equipeCasais.ficha.fotoEla}" rendered="#{equipeCasais.ficha.fotoEla.length() > 0}"
 												style="width:20px; height:20px; float: right;" title="Foto dela"/>
-								<h:graphicImage library="imagens" value="/image?imagem=#{encontristas.ficha.fotoEle}" rendered="#{encontristas.ficha.fotoEle.length() > 0}"
+								<h:graphicImage library="imagens" value="/image?imagem=#{equipeCasais.ficha.fotoEle}" rendered="#{equipeCasais.ficha.fotoEle.length() > 0}"
 												style="width:20px; height:20px; float: right;" title="Foto dele"/>
 							</p:column>
 							<p:columnGroup type="footer">
 								<p:row>
-									<p:column footerText="Total: #{circulo.circulosEccCasais.size()}"
+									<p:column footerText="Total: #{equipe.equipesEccCasais.size()}"
 											  style="text-align:right; background-color:#adc2eb;" />
 								</p:row>
 							</p:columnGroup>
 						</p:subTable>
 					</p:dataTable>
 				</div>
-		</div>
-<!--
-AQUI
--->
-		<!-- DIV EQUIPES -->
-		<div id="divEstatisticaChefeInferiorDireita">
-			<div class="caixa caixa-vermelha" style="width: 520px;">
-				<h:outputLabel value="Equipes"
-							   styleClass="negrito" style="font-size:15px;" />
-				<p:selectOneMenu id="ecc2" value="#{estatisticaBean.eccFiltro}"
-								 style="width:105px;margin-left:260px;display: inline-table">
-					<f:selectItem itemLabel="TODOS"/>
-					<f:selectItems value="#{eccBean.listaEcc}"
-								   var="ecc" itemValue="#{ecc.numero}"
-								   itemLabel="#{ecc.numero}" />
-					<p:ajax listener="#{estatisticaBean.filtraPorEquipes()}"
-							event="change" update="tabelaEquipes" />
-				</p:selectOneMenu>
-				<p:commandLink actionListener="#{estatisticaBean.imprimirEcc}"
-							   target="_blank" ajax="false" immediate="true">
-					<p:button icon="ui-icon-print" style="margin-left: 5px;" />
-				</p:commandLink>
 			</div>
-		</div>
-		<div id="divEstatisticaChefeInferiorDireita_01">
-			<p:dataTable id="tabelaEquipes" var="equipe"
-						 value="#{estatisticaBean.listaDasEquipes}"
-						 emptyMessage="Não há Equipes">
-				<p:columnGroup type="header">
-					<p:row>
-						<p:column rowspan="1" headerText="Equipes" width="470px;"/>
-					</p:row>
-				</p:columnGroup>
-				<p:subTable var="equipeCasais" value="#{equipe.equipesEccCasais}" rendered="#{equipe.equipesEccCasais.size() > 0}">
-					<f:facet name="header">
-						<h:panelGrid columns="3" styleClass="semBordaInterna"
-									 columnClasses="gridColum01 gridColum02 gridColum02">
-							<h:outputText
-									value="#{equipe.equipe.descricao} | #{equipe.casalCoordenador.nomeUsual}" />
-							<h:graphicImage library="imagens" value="/image?imagem=#{equipe.casalCoordenador.fotoEle}" rendered="#{equipe.casalCoordenador.fotoEle.length() > 0}"
-											style="width:20px; height:20px; float: right;" title="Foto dela"/>
-							<h:graphicImage library="imagens" value="/image?imagem=#{equipe.casalCoordenador.fotoEla}" rendered="#{equipe.casalCoordenador.fotoEla.length() > 0}"
-											style="width:20px; height:20px; float: left;" title="Foto dela"/>
-
-						</h:panelGrid>
-					</f:facet>
-					<p:column>
-						<h:outputText value="#{equipeCasais.ficha.nomeUsual}" />
-						<h:graphicImage library="imagens" value="/image?imagem=#{equipeCasais.ficha.fotoEla}" rendered="#{equipeCasais.ficha.fotoEla.length() > 0}"
-										style="width:20px; height:20px; float: right;" title="Foto dela"/>
-						<h:graphicImage library="imagens" value="/image?imagem=#{equipeCasais.ficha.fotoEle}" rendered="#{equipeCasais.ficha.fotoEle.length() > 0}"
-										style="width:20px; height:20px; float: right;" title="Foto dele"/>
-					</p:column>
-					<p:columnGroup type="footer">
-						<p:row>
-							<p:column footerText="Total: #{equipe.equipesEccCasais.size()}"
-									  style="text-align:right; background-color:#adc2eb;" />
-						</p:row>
-					</p:columnGroup>
-				</p:subTable>
-			</p:dataTable>
-		</div>
-
 	</div>
-
-
 	</h:form>
 	<p:dialog widgetVar="statusDialog" modal="true" draggable="false"
 			  closable="false" resizable="false" showHeader="false" width="250px">
