Ajustes paginação ecc, equipes, palestrantes e circulos

--- a/src/main/webapp/dirigente/montagemCirculo.xhtml
+++ b/src/main/webapp/dirigente/montagemCirculo.xhtml
@@ -138,7 +138,7 @@
 				<p:dataTable id="circulosEcc" value="#{circuloEccBean.listaCirculoEcc}" var="circuloEcc" rowIndexVar="index" selection="#{circuloEccBean.circuloEcc}"
 							 selectionMode="single" rowKey="#{circuloEcc.id}"
 							 emptyMessage="Não há Círculos cadastrados" style="width:1120px;"
-							 rows="14" paginator="true" paginatorTemplate="{CurrentPageReport} {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
+							 paginator="false" paginatorTemplate="{CurrentPageReport} {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
 							 rowsPerPageTemplate="14,28,42,56,70" paginatorPosition="top"
 							 currentPageReportTemplate="Registro(s) {startRecord} a {endRecord} de um total de {totalRecords} - Página {currentPage} de {totalPages}">
 					<f:facet name="header">
