--- a/src/main/webapp/dirigente/montagemEquipe.xhtml
+++ b/src/main/webapp/dirigente/montagemEquipe.xhtml
@@ -151,7 +151,7 @@
 						<f:selectItem itemLabel="ENCERRADO" itemValue="ENCERRADO" />
 					</p:selectOneButton >
 					<p:commandButton icon="ui-icon-search" update="equipesEcc" process="@this statusECC lbECC"
-									 action="#{equipeEccBean.filtraEquipecc()}"/>
+									 action="#{equipeEccBean.filtraEquipeEcc()}"/>
 				</h:panelGrid>
 			</f:facet>
 		</p:toolbar>
